# satellite-orbit-telemetry-project

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp  satellite.cpp  satellite.h  vec3.h
